<resources>
    <string name="app_name">Gaming Resources</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">gamingresources1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_user">User Profile</string>

    <string name="yes_string">Yes</string>
    <string name="confirm_string">CONFIRM</string>
    <string name="no_string">No</string>
    <string name="ok_string">OK</string>
    <string name="cancek_string">Cancel</string>
    <string name="wait_string">Loading..</string>
    <string name="no_internet_string">Check Your Internet Connection</string>
    <string name="something_went_string">something went wrong</string>
    <string name="try_again_string">Try Again Later</string>
    <string name="validation_string">Fill Up All Information</string>
    <string name="submit_string">Submit</string>
    <string name="no_data_string">No Information</string>

    <string name="best_sell_string">Popular Game Direct Top up</string>
    <string name="game_top_up_string">Game Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_string">Enter User Name</string>
    <string name="mbl_string">Enter User Mobile</string>
    <string name="email_string">Enter User Email</string>
    <string name="password_string">Enter Password</string>
    <string name="login_string">Login</string>
    <string name="regis_string">Registration</string>
    <string name="forgot_string">Forgot Password?</string>

    <string name="history_string">Order History</string>
    <string name="orderid_string">Order ID :</string>
    <string name="orderdetails_string">Order Details :</string>
    <string name="ordername_string">Order Name :</string>
    <string name="orderquantity_string">Quantity :</string>
    <string name="orderdate_string">Date :</string>
    <string name="orderpayment_string">Payment Method :</string>
    <string name="totalprice_string">Order Price :</string>
    <string name="delivery_string">Expected Delivery :</string>

    <string name="reg_success_string">Your Registration Complete</string>
    <string name="login_suc_string">Your have successfully Logged in.</string>
    <string name="login_unsuc_string">Email or Password is wrong</string>

    <string name="forget_suc_string">Check Your Email</string>
    <string name="forget_unsuc_string">Please Enter a Valid Email</string>
    <string name="order_login_string">Please Login to your account</string>
    <string name="order_product_string">Please Select a product</string>
    <string name="order_price_string">Please Select a Price</string>
    <string name="order_mbl_string">Enter a Payment Mobile Number</string>
    <string name="order_tarn_string">Transaction id and Reference name</string>
    <string name="order_msg_string">Payment method and message</string>
    <string name="order_ingame1_string">Enter Email or Facebook Id</string>
    <string name="order_ingame2_string">Enter Password</string>
    <string name="order_uid1_string">Enter Player Id</string>
    <string name="order_uid2_string">Enter Nickname</string>
    <string name="order_suc_string">Accepted your order</string>

    <string name="update_string">Update Profile</string>
    <string name="update_suc_string">Profile Update Complete</string>
    <string name="payment_url_string">http://gamingresources.afsarbd.com/how-to-pay/</string>
    <string name="payment_how_string"><u>If you dont know how to pay,Click Here</u></string>
    <string name="logout_string">LOG OUT</string>
    <string name="logout_confirm_string">Are You sure?</string>
    <string name="contact_string">Contact</string>
    <string name="msg_string">Message Us</string>
    <string name="privacy_policy_string">Privacy Policy</string>
    <string name="no_browser_string">No Browser Found to Open Link</string>


    <string name="default_notification_channel_id">Game_NOTIFICATION</string>
</resources>