<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/frag_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_string"
            android:visible="false" />
        <item
            android:id="@+id/frag_message"
            android:icon="@drawable/ic_msg"
            android:title="@string/msg_string" />
        <item
            android:id="@+id/frag_contact"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_string" />
        <item
            android:id="@+id/frag_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy_string" />
        <item
            android:id="@+id/frag_login"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/frag_user"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_user"
            android:visible="false" />
    </group>
</menu>