<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FRAGMENT.ProfileEdit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_icon_black"
                android:contentDescription="@string/regis_string" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_string"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_string"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_mbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/mbl_string"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/edit_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rectangular_orange"
                android:text="@string/update_string"
                android:textColor="@color/app_white"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_loglut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rectangular_black_border_white"
                android:text="@string/logout_string"
                android:textColor="@color/app_text"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</layout>