<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/history_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_white"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderhistory_orderid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/orderid_string"
                android:textColor="@color/app_text"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderhistory_orderstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_back"
                android:gravity="end"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/history_string"
                android:textColor="@color/app_white"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/order_history_more"
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_down_arrow"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_history_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/orderdetails_string"
                android:textColor="@color/app_green"
                android:textSize="@dimen/font_xxl"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ordername_string" />

                <TextView
                    android:id="@+id/orderhistory_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/ordername_string"
                    android:textAlignment="textEnd"
                    android:textColor="@color/app_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderquantity_string" />

                <TextView
                    android:id="@+id/orderhistory_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/orderquantity_string"
                    android:textAlignment="textEnd"
                    android:textColor="@color/app_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderdate_string" />

                <TextView
                    android:id="@+id/orderhistory_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/orderdate_string"
                    android:textAlignment="textEnd"
                    android:textColor="@color/app_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderpayment_string" />

                <TextView
                    android:id="@+id/orderhistory_payment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/orderpayment_string"
                    android:textAlignment="textEnd"
                    android:textColor="@color/app_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_string" />

                <TextView
                    android:id="@+id/orderhistory_deliverydate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/orderpayment_string"
                    android:textAlignment="textEnd"
                    android:textColor="@color/app_text" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/bg_drop_shadow" />

            <TextView
                android:id="@+id/orderhistory_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/totalprice_string"
                android:textAlignment="textEnd"
                android:textColor="@color/app_green"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>