<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FRAGMENT.ProductDetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/ic_loading"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/product_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/app_orange"
                android:textSize="@dimen/font_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/app_text"
                android:textSize="@dimen/font_huge" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:id="@+id/price_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_input1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_uid1_string"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_input2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_uid2_string"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/order_mbl_string"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_tarn_string"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_msg_string"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/product_howtopay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/payment_how_string"
                android:textColor="@color/app_green"
                android:visibility="gone" />

            <Button
                android:id="@+id/product_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangular_orange"
                android:gravity="center"
                android:text="@string/confirm_string"
                android:textAllCaps="true"
                android:textColor="@color/app_white"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>