<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FRAGMENT.LoginPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/regis_string"
                android:src="@drawable/ic_appicon" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_string"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_string"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/app_green" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rectangular_orange"
                android:text="@string/login_string"
                android:textColor="@color/app_white"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/login_forgot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangular_black_border_white"
                    android:text="@string/forgot_string"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/font_l"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/login_reg"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangular_black"
                    android:text="@string/regis_string"
                    android:textColor="@color/app_orange"
                    android:textSize="@dimen/font_l"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>